version2/CONTRIBUTORS-sap_install.md
# Contributors to community.sap_install

Thank you to all contributors who have helped make this project possible!

## All Contributors

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 806 | 67802 | 2025-08-05 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 471 | 27954 | 2025-02-28 |
| [Sean Freeman](https://github.com/sean-freeman) | 213 | 25561 | 2025-02-28 |
| [Nils Koenig](https://github.com/newkit) | 81 | 19806 | 2024-01-29 |
| [Marcel Mamula](https://github.com/marcelmamula) | 76 | 30589 | 2025-08-01 |
| [Markus Koch](https://github.com/rhmk) | 76 | 3462 | 2024-12-27 |
| [Markus Moster](https://github.com/mmoster) | 65 | 7983 | 2022-06-28 |
| [Gabriele Puliti](https://github.com/Wabri) | 46 | 2544 | 2024-08-02 |
| [Rob Dobozy](https://github.com/rob0d) | 31 | 820 | 2025-03-24 |
| [Kirill Satarin](https://github.com/kksat) | 21 | 834 | 2024-01-30 |
| [Rainer Leber](https://github.com/rainerleber) | 17 | 1209 | 2023-02-01 |
| [Steven Stringer](https://github.com/mr-stringer) | 8 | 586 | 2022-12-14 |
| Roberto Nozaki | 6 | 116 | 2024-03-09 |
| Sjoerd Lubbers | 4 | 21 | 2025-04-16 |
| Bruno Doser | 4 | 218 | 2023-12-04 |
| SunnyCrockett | 3 | 6 | 2025-03-17 |
| Alexander Wilke | 2 | 10 | 2024-11-14 |
| remi.mrozek | 2 | 7 | 2024-07-29 |
| Irina Gulina | 2 | 145 | 2024-01-03 |
| Ranjith Rajaram | 2 | 46 | 2022-11-22 |
| Karoly Czovek | 2 | 10 | 2022-09-23 |
| surajsbharadwaj | 1 | 14 | 2023-08-29 |

## Contributions by Role

### Role: sap_netweaver_preconfigure

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 62 | 2390 | 2025-07-28 |
| [Marcel Mamula](https://github.com/marcelmamula) | 20 | 2129 | 2025-06-05 |
| [Rainer Leber](https://github.com/rainerleber) | 9 | 243 | 2023-02-01 |
| [Sean Freeman](https://github.com/sean-freeman) | 6 | 66 | 2024-07-17 |
| [Steven Stringer](https://github.com/mr-stringer) | 4 | 237 | 2022-12-13 |
| Bruno Doser | 3 | 101 | 2023-12-04 |
| [Gabriele Puliti](https://github.com/Wabri) | 2 | 32 | 2024-06-25 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 1 | 2 | 2024-01-12 |
| Irina Gulina | 1 | 2 | 2024-01-03 |

### Role: sap_storage_setup

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Janine Fuchs](https://github.com/ja9fuchs) | 53 | 3475 | 2024-01-12 |
| [Sean Freeman](https://github.com/sean-freeman) | 9 | 744 | 2024-07-23 |
| [Bernd Finger](https://github.com/berndfinger) | 8 | 61 | 2025-02-17 |
| [Marcel Mamula](https://github.com/marcelmamula) | 5 | 724 | 2025-05-07 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 17 | 2024-06-25 |
| Irina Gulina | 1 | 4 | 2024-01-03 |

### Role: sap_hostagent

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 15 | 616 | 2024-07-23 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 2 | 11 | 2025-02-14 |
| [Marcel Mamula](https://github.com/marcelmamula) | 2 | 652 | 2024-09-27 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 11 | 2024-06-25 |
| Irina Gulina | 1 | 16 | 2024-01-03 |
| Alexander Wilke | 1 | 6 | 2023-07-25 |

### Role: sap_ha_pacemaker_cluster

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Janine Fuchs](https://github.com/ja9fuchs) | 195 | 16084 | 2025-02-27 |
| [Marcel Mamula](https://github.com/marcelmamula) | 51 | 16624 | 2025-07-29 |
| [Sean Freeman](https://github.com/sean-freeman) | 12 | 391 | 2024-05-23 |
| [Bernd Finger](https://github.com/berndfinger) | 6 | 78 | 2025-02-17 |
| [Rob Dobozy](https://github.com/rob0d) | 3 | 7 | 2025-01-08 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 66 | 2024-06-25 |
| Irina Gulina | 1 | 10 | 2024-01-03 |

### Role: sap_ha_install_anydb_ibmdb2

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Sean Freeman](https://github.com/sean-freeman) | 26 | 3316 | 2024-07-22 |
| [Marcel Mamula](https://github.com/marcelmamula) | 2 | 209 | 2024-09-27 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 1 | 2 | 2024-11-27 |
| [Bernd Finger](https://github.com/berndfinger) | 1 | 7 | 2024-07-23 |

### Role: sap_hana_preconfigure

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 159 | 13537 | 2025-08-05 |
| [Marcel Mamula](https://github.com/marcelmamula) | 27 | 3835 | 2025-06-20 |
| [Gabriele Puliti](https://github.com/Wabri) | 14 | 308 | 2024-07-23 |
| [Rainer Leber](https://github.com/rainerleber) | 11 | 51 | 2023-02-01 |
| [Sean Freeman](https://github.com/sean-freeman) | 10 | 158 | 2024-07-18 |
| Bruno Doser | 4 | 117 | 2023-12-04 |
| [Steven Stringer](https://github.com/mr-stringer) | 4 | 336 | 2022-12-14 |
| [Rob Dobozy](https://github.com/rob0d) | 2 | 12 | 2025-03-13 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 2 | 4 | 2024-01-12 |
| Irina Gulina | 1 | 15 | 2024-01-03 |
| [Markus Koch](https://github.com/rhmk) | 1 | 1 | 2023-10-18 |

### Role: sap_anydb_install_oracle

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Sean Freeman](https://github.com/sean-freeman) | 15 | 3832 | 2024-02-14 |
| [Marcel Mamula](https://github.com/marcelmamula) | 5 | 545 | 2025-05-22 |
| [Bernd Finger](https://github.com/berndfinger) | 5 | 54 | 2024-07-23 |
| Roberto Nozaki | 4 | 110 | 2024-01-18 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 9 | 2024-06-25 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 1 | 2 | 2024-01-12 |
| Irina Gulina | 1 | 6 | 2024-01-03 |

### Role: sap_install_media_detect

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 162 | 10927 | 2025-07-28 |
| [Sean Freeman](https://github.com/sean-freeman) | 31 | 2750 | 2024-06-26 |
| [Marcel Mamula](https://github.com/marcelmamula) | 2 | 719 | 2024-09-27 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 20 | 2024-06-25 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 1 | 2 | 2024-01-12 |
| Irina Gulina | 1 | 6 | 2024-01-03 |

### Role: sap_maintain_etc_hosts

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 14 | 242 | 2025-07-28 |
| [Marcel Mamula](https://github.com/marcelmamula) | 3 | 464 | 2025-06-10 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 9 | 2024-06-25 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 1 | 2 | 2024-01-12 |
| Irina Gulina | 1 | 14 | 2024-01-03 |
| [Markus Koch](https://github.com/rhmk) | 1 | 679 | 2023-11-10 |

### Role: sap_hana_install

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 176 | 10660 | 2025-07-29 |
| [Markus Koch](https://github.com/rhmk) | 13 | 454 | 2022-11-22 |
| [Marcel Mamula](https://github.com/marcelmamula) | 7 | 1061 | 2025-08-01 |
| Sjoerd Lubbers | 4 | 21 | 2025-04-16 |
| [Sean Freeman](https://github.com/sean-freeman) | 3 | 11 | 2023-09-27 |
| Ranjith Rajaram | 3 | 75 | 2022-11-22 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 2 | 6 | 2024-01-12 |
| [Markus Moster](https://github.com/mmoster) | 2 | 8 | 2022-06-28 |
| [Rainer Leber](https://github.com/rainerleber) | 2 | 4 | 2022-05-17 |
| SunnyCrockett | 1 | 2 | 2025-03-17 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 46 | 2024-06-25 |
| Irina Gulina | 1 | 10 | 2024-01-03 |

### Role: sap_swpm

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 105 | 7254 | 2025-06-10 |
| [Sean Freeman](https://github.com/sean-freeman) | 70 | 2303 | 2024-06-20 |
| [Rob Dobozy](https://github.com/rob0d) | 19 | 655 | 2025-01-14 |
| [Markus Koch](https://github.com/rhmk) | 6 | 68 | 2022-11-16 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 5 | 76 | 2024-01-12 |
| [Markus Moster](https://github.com/mmoster) | 3 | 2 | 2022-06-09 |
| SunnyCrockett | 2 | 4 | 2025-03-17 |
| [Marcel Mamula](https://github.com/marcelmamula) | 2 | 756 | 2024-10-03 |
| Roberto Nozaki | 1 | 2 | 2024-03-09 |
| Irina Gulina | 1 | 4 | 2024-01-03 |
| surajsbharadwaj | 1 | 14 | 2023-08-29 |
| [Rainer Leber](https://github.com/rainerleber) | 1 | 4 | 2022-04-24 |

### Role: sap_general_preconfigure

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Bernd Finger](https://github.com/berndfinger) | 171 | 11303 | 2025-07-28 |
| [Marcel Mamula](https://github.com/marcelmamula) | 20 | 3095 | 2025-06-20 |
| [Markus Koch](https://github.com/rhmk) | 8 | 220 | 2024-12-27 |
| [Rob Dobozy](https://github.com/rob0d) | 5 | 47 | 2025-03-12 |
| [Sean Freeman](https://github.com/sean-freeman) | 3 | 12 | 2024-05-29 |
| [Rainer Leber](https://github.com/rainerleber) | 3 | 934 | 2022-05-17 |
| [Janine Fuchs](https://github.com/ja9fuchs) | 2 | 4 | 2025-01-29 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 106 | 2024-06-25 |
| Irina Gulina | 1 | 18 | 2024-01-03 |
| [Steven Stringer](https://github.com/mr-stringer) | 1 | 2 | 2022-12-02 |

### Role: sap_ha_install_hana_hsr

| Name | Commits | Lines Changed | Last Commit |
| ---- | ------- | ------------- | ----------- |
| [Janine Fuchs](https://github.com/ja9fuchs) | 51 | 1424 | 2024-09-16 |
| [Markus Moster](https://github.com/mmoster) | 28 | 734 | 2022-06-24 |
| [Bernd Finger](https://github.com/berndfinger) | 11 | 440 | 2024-07-23 |
| [Markus Koch](https://github.com/rhmk) | 9 | 114 | 2022-07-20 |
| [Marcel Mamula](https://github.com/marcelmamula) | 4 | 685 | 2025-07-30 |
| [Sean Freeman](https://github.com/sean-freeman) | 2 | 10 | 2022-09-13 |
| [Gabriele Puliti](https://github.com/Wabri) | 1 | 10 | 2024-06-25 |
| Irina Gulina | 1 | 4 | 2024-01-03 |

